--- a/index.html
+++ b/index.html
@@ -14,29 +14,29 @@
         }
 
         body {
-            height: 100vh;
+            min-height: 100vh;
             width: 100%;
             display: flex;
             justify-content: center;
             align-items: center;
             font-family: 'Raleway', sans-serif;
             background: url('https://images.unsplash.com/photo-1451187580459-43490279c0fa?q=80&w=2072&auto=format&fit=crop') no-repeat center center/cover;
-            overflow: hidden;
             color: #ffffff;
+            position: relative;
         }
 
         .overlay {
-            position: absolute;
+            position: fixed;
             top: 0;
             left: 0;
             width: 100%;
             height: 100%;
-            background: rgba(0, 0, 0, 0.4);
+            background: rgba(0, 0, 0, 0.5);
             z-index: 1;
         }
 
         .moon-element {
-            position: absolute;
+            position: fixed;
             top: 10%;
             right: 10%;
             width: 100px;
@@ -57,21 +57,21 @@
         .container {
             position: relative;
             z-index: 10;
-            background: rgba(16, 22, 35, 0.75);
+            background: rgba(16, 22, 35, 0.85);
             backdrop-filter: blur(12px);
-            padding: 3rem;
+            padding: 2.5rem;
             border-radius: 20px;
             border: 1px solid rgba(255, 255, 255, 0.1);
             box-shadow: 0 0 40px rgba(0, 150, 255, 0.2);
             text-align: center;
             max-width: 800px;
             width: 90%;
-            margin: 20px;
+            margin: 40px 20px;
         }
 
         h1 {
             font-family: 'Orbitron', sans-serif;
-            font-size: 2.2rem;
+            font-size: 2rem;
             margin-bottom: 1rem;
             background: linear-gradient(90deg, #00d2ff, #3a7bd5);
             -webkit-background-clip: text;
@@ -83,27 +83,38 @@
         }
 
         .subheading {
-            font-size: 1rem;
+            font-size: 0.95rem;
             line-height: 1.6;
-            margin-bottom: 3rem;
+            margin-bottom: 2rem;
             color: #d1d5db;
             font-weight: 300;
+        }
+
+        .section-header {
+            font-family: 'Orbitron', sans-serif;
+            font-size: 1.2rem;
+            color: #00d2ff;
+            margin: 2.5rem 0 1.5rem 0;
+            letter-spacing: 1px;
+            text-transform: uppercase;
+            border-top: 1px solid rgba(255, 255, 255, 0.1);
+            padding-top: 2rem;
         }
 
         .button-container {
             display: flex;
             justify-content: center;
-            gap: 2rem;
+            gap: 1.5rem;
             flex-wrap: wrap;
         }
 
         .space-btn {
             text-decoration: none;
             position: relative;
-            padding: 1.2rem 2.5rem;
+            padding: 1rem 2rem;
             font-family: 'Orbitron', sans-serif;
             font-weight: 700;
-            font-size: 1.1rem;
+            font-size: 1rem;
             color: white;
             background: rgba(255, 255, 255, 0.05);
             border: 1px solid rgba(255, 255, 255, 0.2);
@@ -111,14 +122,14 @@
             transition: all 0.4s ease;
             overflow: hidden;
             letter-spacing: 1px;
-            min-width: 200px;
+            min-width: 220px;
         }
 
         .space-btn:hover {
             background: rgba(0, 210, 255, 0.2);
             border-color: #00d2ff;
             box-shadow: 0 0 30px rgba(0, 210, 255, 0.4);
-            transform: translateY(-5px);
+            transform: translateY(-3px);
         }
 
         .space-btn::before {
@@ -138,14 +149,17 @@
 
         @media (max-width: 600px) {
             h1 {
-                font-size: 1.5rem;
+                font-size: 1.4rem;
             }
             .container {
-                padding: 2rem 1.5rem;
+                padding: 1.5rem;
             }
             .button-container {
                 flex-direction: column;
                 gap: 1rem;
+            }
+            .space-btn {
+                width: 100%;
             }
         }
     </style>
@@ -159,7 +173,7 @@
         <h1>MATHS SOLUTION BY BRD<br>for<br>(B TECH BIOTECHNOLOGY SECTION D)</h1>
         
         <p class="subheading">
-            These are the questions from maths assignments with their answers. All the questions are seperated with their topic. Not all the answers are by me, I got some from different internet sources so a pint of them or may not be wrong.
+            These are the questions from maths assignments with their answers. All the questions are seperated with their topic. Not all the answers are by me, I got some from different internet sources so a pint of them may or may not be wrong.
         </p>
 
         <div class="button-container">
@@ -168,6 +182,17 @@
             </a>
             <a href="https://bibhavdas.github.io/ENG-MTH-Unit-2-and-3/" class="space-btn">
                 Unit 2 and 3
+            </a>
+        </div>
+
+        <h2 class="section-header">Detailed step by step solution</h2>
+
+        <div class="button-container">
+            <a href="https://bibhavdas.github.io/ENG-MTH-DETAILED-SOL-UNIT-1-AND-4/" class="space-btn">
+                Unit 1 and 4 (Detailed sol)
+            </a>
+            <a href="https://bibhavdas.github.io/ENG-MTH-DETAILED-SOL-UNIT-2-AND-3/" class="space-btn">
+                Unit 2 and 3 (Detailed sol)
             </a>
         </div>
     </div>
